reprocesses crashes after symbol upload (#350)
* plans crash reprocessing

* adds crash reprocessing

* proves crash reprocessing
